--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/* body  {
+    background: url('assets/images/abgBNj.jpg')
+} */
+
+#news.card:hover {
+    transform: scale(1.1);
+}
