--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a routerLink="" routerLinkActive="active" class="nav-link font-weight-bold fade show active">HOME<span class="sr-only">(current)</span></a>
+                <a routerLink="/home" routerLinkActive="active" class="nav-link font-weight-bold fade show active">HOME<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">
