added single-articles, home-articles and gallery

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-2 .col-md-2">
                 <h5 class="h5">CEO</h5>
                 <hr/>
-                <span>
+               <span>
                 Dr. Chanakya Wijeratne,<br/>
                 Department of Mathematics,<br/>
                 University of Colombo,<br/>
@@ -24,6 +24,12 @@
                 Off Galviharaya Road,<br/>
                 Dehiwela, Sri Lanka.<br/>
                 </span>
+            </div>
+            <div class="col-lg-3 .col-md-3">
+                <h5 class="h5">Upcoming Events</h5>
+                <hr/>
+                <a style="font-weight:bold" href="#">HKIMO 2020 FINALS</a><br/>
+                <a style="font-weight:bold" href="#">HKICO 2020 FINALS</a>
             </div>
             <div class="col-lg-4 .col-md-4">
                 <div class="container">
@@ -52,10 +58,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 .col-md-3">
-                <h5 class="h5">Connect With Us</h5>
-                <hr/>
             </div>
         </div>
     </div>
