--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -22,11 +23,70 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <div class="bg-dark text-white p-2 mb-3">
+        <h2> CUT OFF MARKS - SLMC 2019</h2>
+        <img class="d-block w-100" src="assets/images/CUTOFF-MARKS-SLMC.png">
+    </div>
+    <div class="container mt-40">
+        <h3 class="text-center">GALLERY</h3>
+        <div class="row mt-30">
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home1.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the HKISO training workshop: Primary students</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home2.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the HKISO training workshop: Science undergraduates guided the students</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home3.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the HKISO training workshop: Dr. Chanakya had a few words for the parents at the conclusion (the competition is to be held on 21 Dec).</span>
+                    </div>
+                </div>
+            </div>
+        <!--/div-->
+        <!--div class="row mt-30"-->
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home4.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the TIMO Training Workshop</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home5.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the TIMO Training Workshop: the heat round was conducted on 30 Nov</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-lg-4">
+                <div class="box17">
+                    <img src="assets/images/Homegallery/olympiyad_home6.jpg" alt="">
+                    <div class="box-content">
+                        <span class="post">At the TIMO training workshop</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div>
     <div id="accordion" class="mb-3">
         <div class="card">
-        <div class="card-header" id="headingOne">
+        <div class="card-header bg-dark" id="headingOne">
             <h5 class="mb-0">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 International Mathematical Olympiad (IMO)
             </button>
             </h5>
@@ -39,9 +99,9 @@
         </div>
         </div>
         <div class="card">
-        <div class="card-header" id="headingTwo">
+        <div class="card-header bg-dark" id="headingTwo">
             <h5 class="mb-0">
-            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 International Mathematics Competition (IMC) 2019
             </button>
             </h5>
@@ -59,74 +119,101 @@
         </div>
         </div>
         <div class="card">
-        <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                International Teenagers’ Mathematics Olympiad (ITMO)
-            </button>
-            </h5>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-                International Teenagers Mathematics Olympiad (ITMO) is a prestigious international mathematics Olympiad held every two years. It was last held in Philippines in 2017. This competition has the same structure as the International Mathematics Competition (IMC) but it is a better competition than IMC as the name suggests.  ITMO is held at two levels:
-                <ul>
-                    <li>Key Stage II (Grades 6, 7, 8)</li>
-                    <li>Key Stage III (Grades 9, 10, 11)</li>
-                </ul>
-                ITMO is good for students to showcase their mathematical talent at an international level.
+            <div class="card-header bg-dark" id="headingThree">
+                <h5 class="mb-0">
+                <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    International Teenagers’ Mathematics Olympiad (ITMO)
+                </button>
+                </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-body">
+                    International Teenagers Mathematics Olympiad (ITMO) is a prestigious international mathematics Olympiad held every two years. It was last held in Philippines in 2017. This competition has the same structure as the International Mathematics Competition (IMC) but it is a better competition than IMC as the name suggests.  ITMO is held at two levels:
+                    <ul>
+                        <li>Key Stage II (Grades 6, 7, 8)</li>
+                        <li>Key Stage III (Grades 9, 10, 11)</li>
+                    </ul>
+                    ITMO is good for students to showcase their mathematical talent at an international level.
+                </div>
             </div>
         </div>
+        <div class="card">
+            <div class="card-header bg-dark" id="headingfour">
+                <h5 class="mb-0">
+                <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                    World International Mathematical Olympiad (WIMO)
+                </button>
+                </h5>
+            </div>
+            <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordion">
+                <div class="card-body">
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header bg-dark" id="headingfive">
+                <h5 class="mb-0">
+                <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+                    Thailand International Mathematical Olympiad (TIMO)
+                </button>
+                </h5>
+            </div>
+            <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordion">
+                <div class="card-body">
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header bg-dark" id="headingsix">
+                <h5 class="mb-0">
+                <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
+                    Hong Kong International Science Olympiad (HKISO)
+                </button>
+                </h5>
+            </div>
+            <div id="collapsesix" class="collapse" aria-labelledby="headingsix" data-parent="#accordion">
+                <div class="card-body">
+                </div>
+            </div>
         </div>
     </div>
     <div class="card-deck">
-        <div *ngFor="let news of service.getNewForHome()" class="card pt-3 shadow p-3 mb-5 bg-white rounded" id="news" style="width: 18rem; height: 70vh;">
-            <img class="card-img-top" style="height: 15vh;" [src]="news.image" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">{{news.title}}</h5>
-                <p class="card-text">{{news.summary}}</p>
-            </div>
-            <!-- <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-            </ul> -->
-            <div class="card-body">
-                <a href="#" class="card-link">Read more...</a>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">{{news.date}}</small>
-            </div>
+        <!--slice: (page-1) * pageSize : (page-1) * pageSize + pageSize-->
+        <div *ngFor="let article of service.getNewForHome() | slice: page : page + pageSize" class="card pt-3 shadow p-3 mb-5 bg-white rounded" id="news" style="width: 18rem; height: 70vh;">
+            
+            <!-- <div (click)="onClick(article.id)" class="container"> -->
+                <img class="card-img-top" style="height: 15vh;" [src]="article.image" alt="Card image cap">
+                <div (click)="onClick(article.id)" class="card-body">
+                    <h5 class="card-title">{{article.title}}</h5>
+                    <p class="card-text">{{article.summary}}</p>
+                </div>
+                <!-- <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul> -->
+                <!--div class="card-body">
+                    <p class="card-text">{{article.summary}}</p>
+                    < <a href="#" class="card-link">Read more...</a>>
+                </div-->
+                <div class="card-footer">
+                    <small class="text-muted">{{article.date}}</small>
+                </div>
+            <!-- </div> -->
+        
         
         </div>
-        <!-- <div class="card" style="width: 18rem;">
-            <img class="card-img-top" style="height: 15vw;" src="assets/images/Article2.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            < <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-            </ul> 
-            <div class="card-body">
-                <a href="#" class="card-link">Read more...</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" style="height: 15vw;" src="assets/images/Article3.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            < <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-            </ul> 
-            <div class="card-body">
-                <a href="#" class="card-link">Read more...</a>
-            </div>
-        </div> -->
+        
+        <!--ngb-pagination [collectionSize]="5" [(page)]="page" [(pageSize)]="pageSize" aria-label="Default pagination">
+            <ng-template ngbPaginationPrevious>Prev</ng-template>
+  <ng-template ngbPaginationNext>Next</ng-template>
+        </ngb-pagination-->
     </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+        <li [ngClass]="{disabled:disablePrevious()}" class="page-item">
+            <a class="page-link" (click)="decreasePageNumber()">Previous</a></li>
+        <li [ngClass]="{disabled:disableNext()}" class="page-item"><a class="page-link" (click)="increasePageNumber()">Next</a></li>
+    </ul>
+    </nav>
 </div>
