--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,22 +1,25 @@
 <div class="container">
     <div class="card-columns">
-        <div *ngFor="let news of service.getNews()" class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-            <img class="card-img-top" style="height: 15vw;" [src]="news.image" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">{{news.title}}</h5>
-                <p class="card-text">{{news.summary}}</p>
-            </div>
-            <!-- <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-            </ul> -->
-            <div class="card-body">
-                <a href="#" class="card-link">Read more...</a>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">{{news.date}}</small>
-            </div>
+        <div *ngFor="let article of service.getNews()" class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+            <app-articlecard [article]=article></app-articlecard>
+            <!--div (click)="onClick(article.id)" class="pointerCursor">
+                <img class="card-img-top" style="height: 15vw;" [src]="article.image" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">{{article.title}}</h5>
+                    <p class="card-text">{{article.summary}}</p>
+                </div-->
+                <!-- <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul> -->
+                <!--div class="card-body">
+                    <a href="#" class="card-link">Read more...</a>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">{{article.date}}</small>
+                </div>
+            </div-->
         </div>
     </div>
 </div>
