--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h4 class="page-header">NEWS</h4>
     <div class="card-columns">
         <div *ngFor="let article of service.getNews()" class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
             <app-articlecard [article]=article></app-articlecard>
