--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 
 <div class="container">
+    <h4 class="page-header">HOME</h4>
     <div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
