--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,10 @@
 #news.card:hover {
     transform: scale(1.1);
 }
+
+.page-header{
+    text-align:center; 
+    color: honeydew;
+    background-color: dimgray;
+    margin-bottom: 30px;
+}
